# PhotoManager

./: .gitignore  main.py  pyproject.toml  requirements.txt  文档.md
.trae/rules/: project_rules.md
app/widgets/: info_panel.py  main_window.py  photo_grid.py  sidebar.py
