[project]
name = "photomanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pyside6>=6.9.1",
    "python-dotenv>=1.1.1",
]

[tool.uv]
# 配置阿里源
index-url = "https://mirrors.aliyun.com/pypi/simple/"
# 禁用默认源
no-index = false
